SEO対策一部実施

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon2.ico">
-    <title>Hayashi-engei</title>
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="description" content="林園芸では、豊富な知識と経験からオリジナルの品種を日々開発し、一人ひとりにあったシクラメンを提供しています。">
+    <title>有限会社林園芸 | Hayashi-engei</title>
   </head>
   <body>
     <noscript>
